--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         3. Production of projects with field workers<br>
     </p>
 
-    <h2>Proeject</h2>
+    <h2>Project</h2>
     <img src = "https://cdn.discordapp.com/attachments/1134858703355514980/1151387034225745960/image.png?ex=6538a5bc&is=652630bc&hm=f7b3a807803b120023a64b14d2f751e83770d50a9d26ddc424a0f8a4b3a0ee68&">
 </body>
 </html>
